--- a/src/main/resources/addPost.fxml
+++ b/src/main/resources/addPost.fxml
@@ -1,71 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.collections.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-
-<?import javafx.scene.image.ImageView?>
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 <?import javafx.scene.web.WebView?>
-<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.AjouterPostController" stylesheets="style.css">
+
+<AnchorPane prefHeight="700.0" prefWidth="1000.0" stylesheets="style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.AjouterPostController">
   <children>
-    <Pane layoutX="98.0" layoutY="11.0" prefHeight="650" prefWidth="438.0" styleClass="eco-card">
+    <Pane layoutX="101.0" layoutY="8.0" prefHeight="650" prefWidth="797.0" styleClass="eco-card">
       <children>
-        <VBox alignment="CENTER" layoutX="27.0" layoutY="11.0" prefHeight="539.0" prefWidth="384.0" spacing="10">
-          <children>
-            <HBox alignment="CENTER_LEFT" spacing="10">
-              <Button fx:id="backButton" onAction="#returnToPostsPage" styleClass="back-button">
-                <graphic>
-                  <ImageView fitWidth="16" fitHeight="16" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@icons/back-icon.png" />
-                  </ImageView>
-                </graphic>
-              </Button>
-              <Label style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Ajouter un post" />
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+              <VBox alignment="CENTER" prefHeight="562.0" prefWidth="369.0" spacing="10">
+                <children>
+                  <HBox alignment="CENTER_LEFT" spacing="10">
+                    <Button fx:id="backButton" onAction="#returnToPostsPage" styleClass="back-button">
+                      <graphic>
+                        <ImageView fitHeight="16" fitWidth="16" pickOnBounds="true" preserveRatio="true">
+                          <Image url="@icons/back-icon.png" />
+                        </ImageView>
+                      </graphic>
+                    </Button>
+                    <Label style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Ajouter un post" />
+                  </HBox>
+                  <TextField fx:id="titreField" prefHeight="21.0" prefWidth="384.0" promptText="Titre" styleClass="search-box">
+                    <padding>
+                      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                    </padding>
+                  </TextField>
+                  <Text fx:id="errorTitre" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="364.800048828125" />
+                  <TextArea fx:id="descriptionArea" prefHeight="52.0" prefWidth="441.0" promptText="Description" styleClass="search-box">
+                    <padding>
+                      <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                    </padding>
+                  </TextArea>
+                  <Text fx:id="errorDescription" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="367.7367057800293" />
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                    <children>
+                      <HBox prefHeight="115.0" prefWidth="379.0">
+                        <children>
+                          <Button fx:id="selectImage" onAction="#selectImageAction" text="Select Image" />
+                          <ImageView fx:id="imageView" fitHeight="150" fitWidth="150" preserveRatio="true" />
+                        </children>
+                      </HBox>
+                    </children>
+                  </VBox>
+                  <Text fx:id="errorImage" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="364.800048828125" />
+                  <ComboBox fx:id="typeComboBox" promptText="Type" styleClass="search-box">
+                    <items>
+                      <FXCollections fx:factory="observableArrayList">
+                        <String fx:value="LOST" />
+                        <String fx:value="FOUND" />
+                      </FXCollections>
+                    </items>
+                    <padding>
+                      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                    </padding>
+                  </ComboBox>
+                  <Text fx:id="errorType" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="364.800048828125" />
+                  <Text fx:id="errorPlace" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="364.800048828125" />
+                  <Button fx:id="buttonAjouter" onAction="#ajouterPost" prefHeight="26.0" prefWidth="103.0" styleClass="sponsor-button" text="Add Post" />
+                </children>
+              </VBox>
+                  <VBox prefHeight="200.0" prefWidth="100.0" />
+               </children>
             </HBox>
-            <TextField fx:id="titreField" prefHeight="21.0" prefWidth="384.0" promptText="Titre" styleClass="search-box">
-              <padding>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-              </padding>
-            </TextField>
-            <Text fx:id="errorTitre" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="364.800048828125" />
-            <TextArea fx:id="descriptionArea" prefHeight="9.0" prefWidth="366.0" promptText="Description" styleClass="search-box">
-              <padding>
-                <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
-              </padding>
-            </TextArea>
-            <Text fx:id="errorDescription" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="367.7367057800293" />
-            <VBox prefHeight="200.0" prefWidth="100.0">
-              <children>
-                <HBox prefHeight="115.0" prefWidth="379.0">
-                  <children>
-                    <Button fx:id="selectImage" onAction="#selectImageAction" text="Select Image" />
-                    <ImageView fx:id="imageView" fitHeight="150" fitWidth="150" preserveRatio="true" />
-                  </children>
-                </HBox>
-              </children>
-            </VBox>
-            <Text fx:id="errorImage" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="364.800048828125" />
-            <ComboBox fx:id="typeComboBox" promptText="Type" styleClass="search-box">
-              <items>
-                <FXCollections fx:factory="observableArrayList">
-                  <String fx:value="LOST" />
-                  <String fx:value="FOUND" />
-                </FXCollections>
-              </items>
-              <padding>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-              </padding>
-            </ComboBox>
-            <Text fx:id="errorType" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="364.800048828125" />
-            <WebView fx:id="mapView" prefHeight="300.0" prefWidth="384.0"/>
-            <Text fx:id="errorPlace" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="364.800048828125" />
-            <Button fx:id="buttonAjouter" onAction="#ajouterPost" prefHeight="26.0" prefWidth="103.0" styleClass="sponsor-button" text="Add Post" />
-          </children>
-        </VBox>
+      <WebView fx:id="mapView" layoutX="401.0" layoutY="133.0" prefHeight="307.0" prefWidth="388.0" />
       </children>
     </Pane>
   </children>
