--- a/src/main/resources/com/codewarrior/markets_coupons/category-view.fxml
+++ b/src/main/resources/com/codewarrior/markets_coupons/category-view.fxml
@@ -77,9 +77,9 @@
          <children>
             <TextField fx:id="titleField" layoutX="24.0" layoutY="39.0" promptText="add title" />
             <TextArea fx:id="descriptionField" layoutX="14.0" layoutY="142.0" prefHeight="108.0" prefWidth="238.0" promptText="Description ..." />
-            <Label fx:id="descriptionControll" layoutX="30.0" layoutY="263.0" prefHeight="24.0" prefWidth="159.0" textFill="WHITE" />
+            <Label fx:id="descriptionControll" layoutX="30.0" layoutY="263.0" prefHeight="24.0" prefWidth="212.0" textFill="RED" />
             <Button layoutX="324.0" layoutY="294.0" mnemonicParsing="false" onMouseClicked="#addButton" text="Add" />
-            <Label fx:id="titleControll" layoutX="24.0" layoutY="73.0" prefHeight="56.0" prefWidth="270.0" textFill="RED" />
+            <Label fx:id="titleControll" layoutX="24.0" layoutY="73.0" prefHeight="53.0" prefWidth="254.0" textFill="RED" />
          </children>
       </Pane>
    </children>
