--- a/src/main/resources/com/codewarrior/markets_coupons/voucher-view.fxml
+++ b/src/main/resources/com/codewarrior/markets_coupons/voucher-view.fxml
@@ -90,10 +90,12 @@
                   <CheckBox fx:id="validityBox" layoutX="224.0" layoutY="183.0" mnemonicParsing="false" text="validity" />
                   <ComboBox fx:id="usableField" layoutX="108.0" layoutY="180.0" prefHeight="24.0" prefWidth="63.0" promptText="0-1" visibleRowCount="1" />
                   <ComboBox fx:id="userField" layoutX="108.0" layoutY="252.0" prefWidth="150.0" promptText="user" />
-                  <ComboBox fx:id="marketField" layoutX="313.0" layoutY="252.0"  prefWidth="150.0" promptText="market" />
-                  <ComboBox fx:id="categoryField" layoutX="108.0" layoutY="308.0"  prefWidth="150.0" promptText="category" />
+                  <ComboBox fx:id="marketField" layoutX="313.0" layoutY="252.0" prefWidth="150.0" promptText="market" />
+                  <ComboBox fx:id="categoryField" layoutX="108.0" layoutY="308.0" prefWidth="150.0" promptText="category" />
                   <TextArea fx:id="typeField" layoutX="305.0" layoutY="288.0" prefHeight="144.0" prefWidth="215.0" promptText="type of coupons ..." />
                   <CheckBox fx:id="isGIvenBox" layoutX="352.0" layoutY="183.0" mnemonicParsing="false" text="Isgiven" />
+                  <Label fx:id="controlValue" layoutX="316.0" layoutY="57.0" prefHeight="24.0" prefWidth="197.0" text="Label" textFill="RED" />
+                  <Label fx:id="dateControll" layoutX="326.0" layoutY="111.0" prefHeight="24.0" prefWidth="150.0" text="Label" textFill="RED" />
                </children>
             </Pane>
             </children>
