--- a/src/main/resources/showPostAdminController.fxml
+++ b/src/main/resources/showPostAdminController.fxml
@@ -1,54 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox id="VBox" fx:id="vboxdash" prefHeight="538.0" prefWidth="1203.0" styleClass="white-pane" stylesheets="/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.dashboard">
-<children>
-    <GridPane prefHeight="538.0" prefWidth="1203.0" stylesheets="/style.css">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints maxHeight="178.19998779296876" minHeight="10.0" prefHeight="56.79999389648438" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="482.4000061035157" minHeight="10.0" prefHeight="482.4000061035157" vgrow="SOMETIMES" />
-        </rowConstraints>
-        <children>
-            <TableView fx:id="tableViewUsers" prefHeight="465.0" prefWidth="1203.0" style="-fx-alignment: center;" stylesheets="/style.css" GridPane.rowIndex="1">
-                <columns>
-                    <TableColumn fx:id="nameColumn" maxWidth="3800.0" minWidth="20.0" style="-fx-alignment: center;" text="username" />
-                    <TableColumn fx:id="descriptionColumn" maxWidth="4500.0" minWidth="20.0" prefWidth="60.0" style="-fx-alignment: center;" text="Email" />
-                    <TableColumn fx:id="dateColumn" maxWidth="3500.0" prefWidth="133.5999755859375" style="-fx-alignment: center;" text="Num Tel " />
-                    <TableColumn fx:id="placeColumn" maxWidth="4000.0" prefWidth="60.0" style="-fx-alignment: center;" text="Is_Verified" />
-                    <TableColumn fx:id="typeColumn" maxWidth="3300.0" prefWidth="133.5999755859375" style="-fx-alignment: center;" text="Etat" />
-                    <TableColumn fx:id="actionsColumn" prefWidth="137.60001220703123" text="Actions" />
-                </columns>
-                <columnResizePolicy>
-                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                </columnResizePolicy>
-            </TableView>
-            <HBox alignment="CENTER_LEFT" prefHeight="54.0" prefWidth="900.0">
-                <children>
-                    <TextField fx:id="tfSearch" prefHeight="44.0" prefWidth="650.0" style="-fx-border-radius: 20px; -fx-border-width: 2px; -fx-background-color: white; -fx-border-color: #c39f6d;">
-                        <HBox.margin>
-                            <Insets left="20.0" right="170.0" />
-                        </HBox.margin>
-                    </TextField>
-                    <ComboBox fx:id="comboBox" onAction="#Select" prefHeight="30.0" prefWidth="255.0" promptText="Trier par :" style="-fx-border-color: #c39f6d;" styleClass="trans-btn-white-border">
-                        <HBox.margin>
-                            <Insets left="10.0" right="20.0" />
-                        </HBox.margin></ComboBox>
-                </children>
-            </HBox>
-        </children>
-    </GridPane>
-</children>
-</VBox>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ComboBox?>
+<AnchorPane id="AnchorPane" prefHeight="713.0" prefWidth="1219.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.dashboard">
+    <children>
+        <Label layoutX="19.0" layoutY="17.0" prefHeight="29.0" prefWidth="207.0" styleClass="header-label" text="Posts Review" />
+        <Separator layoutX="10.0" layoutY="55.0" prefHeight="10" prefWidth="1213.0" />
+        <TextField fx:id="tfSearch" prefHeight="31.0" prefWidth="173.0" promptText="Search" style="-fx-background-color: black;" />
+
+        <Separator layoutX="3.0" layoutY="55.0" prefHeight="4.0" prefWidth="1213.0" />
+        <ScrollPane layoutX="38.0" layoutY="84.0" prefHeight="564.0" prefWidth="1164.0">
+            <content>
+                <VBox spacing="20.0" fx:id="vboxdash">
+                    <!-- Your Posts will be added here -->
+                </VBox>
+            </content>
+        </ScrollPane>
+    </children>
+</AnchorPane>
