--- a/src/main/resources/dashbord.fxml
+++ b/src/main/resources/dashbord.fxml
@@ -102,7 +102,7 @@
                         </Label>
                     </children>
                 </HBox>
-                <HBox layoutX="30.0" layoutY="279.0" prefHeight="45.0" prefWidth="200.0" spacing="20.0" styleClass="button" stylesheets="@style/styleafficher.css">
+                <HBox layoutX="30.0" layoutY="279.0" prefHeight="45.0" onMouseClicked="#showspostgroup" prefWidth="200.0" spacing="20.0" styleClass="button" stylesheets="@style/styleafficher.css">
                     <children>
                         <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                             <image>
