--- a/src/main/resources/showsponsoring.fxml
+++ b/src/main/resources/showsponsoring.fxml
@@ -1,26 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.showSponsoring">
-    <VBox alignment="CENTER" layoutX="6.0" layoutY="-24.0" prefHeight="459.0" prefWidth="951.0">
-        <Label style="-fx-font-size: 24px; -fx-font-weight: bold;" text="List sponsoring" />
-      <Button fx:id="buttonajouter" mnemonicParsing="false" onAction="#handlesponsorButtonClick" text="ADD NEW SPONSOR" />
-        <TableView fx:id="sponsoringTable" prefHeight="258.0" prefWidth="867.0">
-            <columns>
-                <TableColumn fx:id="nameColumn" prefWidth="113.60000467300415" text="Name" />
-                <TableColumn fx:id="descriptionColumn" prefWidth="151.20000457763672" text="Description" />
-                <TableColumn fx:id="imageColumn" prefWidth="134.4000244140625" text="Image" />
-                <TableColumn fx:id="dateColumn" prefWidth="127.20004272460938" text="Date" />
-                <TableColumn fx:id="contratColumn" prefWidth="135.199951171875" text="Contrat" />
-                <TableColumn fx:id="typeColumn" prefWidth="112.800048828125" text="Type" />
-                <TableColumn fx:id="actionsColumn" prefWidth="176.0001220703125" text="Actions" />
-            </columns>
-        </TableView>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.showSponsoring">
+    <VBox alignment="CENTER" layoutX="6.0" layoutY="-24.0" prefHeight="515.0" prefWidth="951.0" stylesheets="@style/styleafficher.css" xmlns:fx="http://javafx.com/fxml">
+        <Label style="-fx-font-size: 24px; -fx-font-weight: bold;" text="List Sponsoring" />
+        <Button fx:id="buttonajouter" mnemonicParsing="false" onAction="#handlesponsorButtonClick" styleClass="post-card" text="ADD NEW SPONSOR" />
+        <ListView fx:id="sponsoringListView" prefHeight="410.0" prefWidth="951.0" />
     </VBox>
 </AnchorPane>
