--- a/src/main/resources/style/styleafficher.css
+++ b/src/main/resources/style/styleafficher.css
@@ -21,11 +21,7 @@
 
 
 .right-bar{
-<<<<<<< HEAD
     -fx-background-color: #f6e6d4;
-=======
-    -fx-background-color: #F8C07F;
->>>>>>> 560008013e3371a7c394d79c8393560c80ec93e7
 }
 
 .shadow {
@@ -48,21 +44,13 @@
     -fx-background-radius: 30;
 }
 .eco-card {
-<<<<<<< HEAD
     -fx-background-color: rgb(250, 247, 208);
-=======
-    -fx-background-color: rgb(245, 240, 174);
->>>>>>> 560008013e3371a7c394d79c8393560c80ec93e7
     -fx-background-radius: 10px; /* Coins arrondis */
     -fx-padding: 15px; /* Marge intérieure */
     -fx-spacing: 10px; /* Espacement entre les éléments */
 }
 .card {
-<<<<<<< HEAD
     -fx-background-color: white; /* Couleur de fond */
-=======
-    -fx-background-color: #fcdc6b; /* Couleur de fond */
->>>>>>> 560008013e3371a7c394d79c8393560c80ec93e7
     -fx-background-radius: 20px; /* Coins arrondis */
     -fx-padding: 30px; /* Marge intérieure */
     -fx-spacing: 30px; /* Espacement entre les éléments */
@@ -82,7 +70,6 @@
     -fx-background-radius: 30;
 
 }
-<<<<<<< HEAD
 .post-card {
     -fx-background-color: #FFFFFF;
     -fx-border-color: #CCCCCC;
@@ -93,10 +80,63 @@
     -fx-spacing: 10px; /* Espace entre les éléments à l'intérieur de la carte */
     -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.1), 10, 0, 0, 10);
 }
+.button-edit{
+    -fx-background-color: #faa345;
+    -fx-text-fill: white;
+    -fx-border-color: #ffc44b;
+    -fx-border-width: 2px;
+    -fx-font-weight: bold;
+    -fx-padding: 10px;
+    -fx-border-radius: 5px;
+    -fx-background-radius: 5px;
+}
 
-=======
->>>>>>> 560008013e3371a7c394d79c8393560c80ec93e7
+.button-edit:hover {
+    -fx-background-color: #4cae4c;
+}
+.button-delete{
+    -fx-background-color: #faa345;
+    -fx-text-fill: white;
+    -fx-border-color: #ffc44b;
+    -fx-border-width: 2px;
+    -fx-font-weight: bold;
+    -fx-padding: 10px;
+    -fx-border-radius: 5px;
+    -fx-background-radius: 5px;
+}
+
+.button-delete:hover {
+    -fx-background-color: #f3030a;
+}
+.image-view {
+    -fx-border-color: #666;
+    -fx-border-width: 1px;
+    -fx-padding: 5px;
+}
+
+.hbox {
+    -fx-spacing: 10px; /* space between elements in hbox */
+}
+
+.vbox {
+    -fx-spacing: 5px; /* space between elements in vbox */
+}
+.button {
+    -fx-padding: 5px;
+    -fx-background-color: #fa7a02;
+    -fx-text-fill: white;
+    -fx-border-width: 1px;
+    -fx-background-radius:30px ;
+}
 
 
 
+.post-card {
+    -fx-padding: 10px;
+    -fx-border-color: #ccc;
+    -fx-border-width: 1px;
+    -fx-background-color: #f9f9f9;
+    -fx-border-radius: 5px;
+    -fx-background-radius: 5px;
+}
 
