--- a/src/main/resources/Reclamation/ReclamationList.fxml
+++ b/src/main/resources/Reclamation/ReclamationList.fxml
@@ -19,7 +19,7 @@
         </VBox>
 
     <!-- Right panel for ListView -->
-    <ListView fx:id="listView" layoutX="296.0" layoutY="130.0" prefHeight="750.0" prefWidth="800git .0">
+    <ListView fx:id="listView" layoutX="296.0" layoutY="130.0" prefHeight="750.0" prefWidth="800.0">
         <!-- Le ListView sera configuré et peuplé depuis le contrôleur -->
     </ListView>
             <!-- Les cellules seront ajoutées dynamiquement -->
