--- a/src/main/resources/addPost.fxml
+++ b/src/main/resources/addPost.fxml
@@ -19,7 +19,7 @@
 
 <AnchorPane prefHeight="700.0" prefWidth="1000.0" stylesheets="style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.AjouterPostController">
   <children>
-    <Pane layoutX="101.0" layoutY="8.0" prefHeight="650" prefWidth="797.0" styleClass="eco-card">
+    <Pane prefHeight="650" prefWidth="971.0" styleClass="eco-card">
       <children>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
@@ -77,7 +77,7 @@
                   <VBox prefHeight="200.0" prefWidth="100.0" />
                </children>
             </HBox>
-      <WebView fx:id="mapView" layoutX="401.0" layoutY="133.0" prefHeight="307.0" prefWidth="388.0" />
+      <WebView fx:id="mapView" layoutX="470.0" layoutY="132.0" prefHeight="307.0" prefWidth="388.0" />
       </children>
     </Pane>
   </children>
