--- a/src/main/resources/Fxml/addquestion.fxml
+++ b/src/main/resources/Fxml/addquestion.fxml
@@ -1,21 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="Fxml.Addquestion">
+<AnchorPane prefHeight="700.0" prefWidth="1000.0" stylesheets="css/styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AddQuestionController">
     <children>
-        <Text fill="#999233" fontSmoothingType="LCD" layoutX="215.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ask a Question" textAlignment="CENTER" wrappingWidth="369.0">
-            <font>
-                <Font name="System Bold Italic" size="28.0" />
-            </font>
-        </Text>
-        <TextField fx:id="Qtitle" layoutX="191.0" layoutY="126.0" promptText="Enter title" />
-        <TextArea fx:id="Qbody" layoutX="191.0" layoutY="172.0" prefHeight="126.0" prefWidth="389.0" promptText="Enter question body" />
-        <Button fx:id="btnask" layoutX="321.0" layoutY="322.0" mnemonicParsing="false" text="Ask" onAction="#addQuestion" />
+        <Pane layoutX="101.0" layoutY="8.0" prefHeight="319.0" prefWidth="399.0" styleClass="eco-card">
+            <children>
+                <HBox prefHeight="100.0" prefWidth="200.0">
+                    <children>
+                        <VBox prefHeight="200.0" prefWidth="100.0" />
+                    </children>
+                </HBox>
+            </children>
+        </Pane>
+        <VBox alignment="CENTER" layoutX="258.0" layoutY="46.0" prefHeight="562.0" prefWidth="369.0" spacing="10" stylesheets="@../css/styles.css">
+            <children>
+                <HBox alignment="CENTER_LEFT" spacing="10">
+                    <Button fx:id="backButton" onAction="#returnToQuestionsPage" styleClass="back-button">
+                        <graphic>
+                            <ImageView fitHeight="16" fitWidth="16" pickOnBounds="true" preserveRatio="true">
+                                <Image url="@../imgs/icons/back-icon.png" />
+                            </ImageView>
+                        </graphic>
+                    </Button>
+                    <Label style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Ask a question" />
+                </HBox>
+                <TextField fx:id="titreField" prefHeight="21.0" prefWidth="384.0" promptText="Title" styleClass="search-box">
+                    <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                    </padding>
+                </TextField>
+                <Text fx:id="errorTitre" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="364.800048828125" />
+                <TextArea fx:id="descriptionArea" prefHeight="52.0" prefWidth="441.0" promptText="Body" styleClass="search-box">
+                    <padding>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                    </padding>
+                </TextArea>
+                <Text fx:id="errorDescription" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="367.7367057800293" />
+                <Button fx:id="buttonAjouter" onAction="#ajouterQuestion" prefHeight="26.0" prefWidth="103.0" styleClass="sponsor-button" text="ASK" />
+            </children>
+        </VBox>
     </children>
 </AnchorPane>
