--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -1,14 +1,35 @@
-.list-cell {
-    -fx-background-color: #f0f0f0;
-    -fx-padding: 10px;
-    -fx-border-color: #ccc;
-    -fx-border-width: 0 0 1px 0; /* bottom border only */
+.root {
+    -fx-font-family: "Arial";
+    -fx-base: rgb(132, 145, 47);
+    -fx-background: rgb(225, 228, 203);
 }
 
-.list-cell:selected {
-    -fx-background-color: #ddd;
+.button {
+    -fx-text-fill: white;
+    -fx-background-color: linear-gradient(#61a2b1, #2A5058);
+    -fx-padding: 10;
 }
 
-.list-view {
-    -fx-background-color: #fff; /* ListView background color */
+.button:hover {
+    -fx-background-color: linear-gradient(#2A5058, #61a2b1);
+}
+
+.text-field, .text-area {
+    -fx-background-color: white;
+    -fx-prompt-text-fill: derive(-fx-control-inner-background, -30%);
+    -fx-padding: 5;
+}
+
+.label {
+    -fx-text-fill: #2A5058;
+}
+
+.back-button {
+    -fx-background-color: transparent;
+    -fx-text-fill: #2A5058;
+}
+
+.error-text {
+    -fx-fill: red;
+    -fx-font-size: 12px;
 }
